--- a/app/views/layouts/header.ejs
+++ b/app/views/layouts/header.ejs
@@ -10,4 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="css/sanpham.css">
+        <link rel="stylesheet" href="css/danhmuc.css">
+        <link rel="stylesheet" href="css/taosanpham.css">
 </head>
