--- a/app/views/layouts/navbar.ejs
+++ b/app/views/layouts/navbar.ejs
@@ -6,10 +6,10 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/api/account/admin">Admin</a></li>
-                <li class="nav-item"><a class="nav-link" href="/api/account/danhmuc">Danh Mục</a></li>
-                <li class="nav-item"><a class="nav-link" href="/api/account/sanpham/">Sản Phẩm</a></li>
-                <li class="nav-item"><a class="nav-link" href="">UpLoad filef</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/api/sanpham/create">Tao san pham</a></li>
+                <li class="nav-item"><a class="nav-link" href="/api/danhmuc/">Danh Mục</a></li>
+                <li class="nav-item"><a class="nav-link" href="/api/sanpham/">Sản Phẩm</a></li>
+                <li class="nav-item"><a class="nav-link" href="/api/upload/">UpLoad file</a></li>
             </ul>
           
             <form class="d-flex">
