--- a/app/views/sanpham.ejs
+++ b/app/views/sanpham.ejs
@@ -1,25 +1,44 @@
-<section class="py-5">
-    <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5">
-                <div class="card h-100">
-                    <!-- Product image-->
-                    <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder"><label>tensanpham</label></h5>
-                            <!-- Product price-->
-                           <label>dongia</label>
+<!DOCTYPE html>
+<html lang="en">
+    <%-include('layouts/header.ejs');-%>
+<body>
+    <!-- Navigation-->
+    <%- include('layouts/navbar'); -%>
+
+
+        <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+    <% for (var i=0; i < sanphams.length; i++) { %>
+                    <div class="col mb-5">
+                        <div class="card h-100">
+                            <!-- Product image-->
+                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">
+                                        <%=sanphams[i].tensanpham%>
+                                    </h5>
+                                    <!-- Product price-->
+                                    <label><%=sanphams[i].dongia%> $</label>
+                                </div>
+                            </div>
+                            <!-- Product actions-->
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!-- Product actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                    </div>
+    <% } %>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
+        </section>
+    
+        <%- include('layouts/footer.ejs'); -%>
+            <!-- Bootstrap core JS-->
+            <%- include('layouts/script.ejs'); -%>
+</body>
+</html>
